--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,19 @@
   <name>Mail_app Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-  
+  <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+<dependency>
+    <groupId>javax.activation</groupId>
+    <artifactId>activation</artifactId>
+    <version>1.1.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4</version>
+</dependency>
+
     
     <dependency>
     <groupId>org.apache.poi</groupId>
